--- a/Karma-page/karma.html
+++ b/Karma-page/karma.html
@@ -3,7 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>karmapage</title>
-	<link href="karma.css" type="text/css" rel="stylesheet"/>
+	<link href="css/karma.css" type="text/css" rel="stylesheet"/>
+	
+	<link href="file://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	
+	<link href="css/font-awesome.min.css" rel="stylesheet">
+	
+
 </head>
 	<body>
 		<nav class="navmain">
@@ -42,7 +48,7 @@
 		<div class="image2">
 				<div class="letter"><h1>Introducing Karma</h1>
 				<p>Bring WiFi with you, everywhere you go.</p>
-				<button> Learn More</button>
+				<button><a href="#"> Learn More </a></button>
 				</div>
 			
 		</div>
@@ -54,11 +60,40 @@
 		
 		<div class="threepic">
 			<ul>
-				<li><img src="imag/cofee.png"></li>
-				<li><img src="imag/cofee2.png"></li>
-				<li><img src="imag/refil.png"></li>
+				<li><img src="imag/cofee.png">
+				<p>Internet for all<br/> &nbsp &nbsp &nbsp 
+				<!--space--> devices</p>
+				</li>
+				<li><img src="imag/cofee2.png">
+				<p>Boost your<br/>productivity</p>
+				</li>
+				<li><img src="imag/refil.png">
+				<p>Pay as You Go</p>
+				</li>
 			</ul>
 		</div>
+
+
+		<div class="footer">
+				<div id="footer">
+					<ul class="footerul">
+						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+
+						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+
+						<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+					</ul>
+
+				</div> 
+
+			
+
+
+		</div>
+
+		
+
+
 
 
 	
