--- a/Karma-page/karma.html
+++ b/Karma-page/karma.html
@@ -4,12 +4,8 @@
 	<meta charset="UTF-8">
 	<title>karmapage</title>
 	<link href="css/karma.css" type="text/css" rel="stylesheet"/>
-	
-	<link href="file://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	
-	<link href="css/font-awesome.min.css" rel="stylesheet">
-	
-
+	<link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="imag/karma-logo.png" />
 </head>
 	<body>
 		<nav class="navmain">
@@ -59,15 +55,16 @@
 
 		
 		<div class="threepic">
+
 			<ul>
-				<li><img src="imag/cofee.png">
-				<p>Internet for all<br/> &nbsp &nbsp &nbsp 
-				<!--space--> devices</p>
+                <li><img src="imag/cofee.png" />
+				<p>Internet for all<br/>
+				devices</p>
 				</li>
-				<li><img src="imag/cofee2.png">
+				<li><img src="imag/cofee2.png" />
 				<p>Boost your<br/>productivity</p>
 				</li>
-				<li><img src="imag/refil.png">
+				<li><img src="imag/refil.png" />
 				<p>Pay as You Go</p>
 				</li>
 			</ul>
